--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@
     <!-- News Ticker (Sliding Message) -->
     <div class="news-ticker" style="background: none; color: #1a237e; padding: 0.6rem 0; font-weight: 700; font-size: 1.08rem; overflow: hidden; position: relative; font-family: 'Poppins', 'Segoe UI', Arial, sans-serif; letter-spacing: 0.5px;">
       <div class="news-ticker-inner" style="white-space: nowrap; display: inline-block; animation: ticker-slide 30s linear infinite; animation-delay: 0s;">
-        <span style="margin-right: 3rem; color:#1a237e; font-family:inherit;">Chief Guest- Prof. Santishree Dhulipudi Pandit, Vice Chancellor, JNU &nbsp;|</span>
+        <!-- <span style="margin-right: 3rem; color:#1a237e; font-family:inherit;">Chief Guest- Prof. Santishree Dhulipudi Pandit, Vice Chancellor, JNU &nbsp;|</span> -->
         <a href="brochure.pdf" target="_blank" rel="noopener" style="color:#1976d2; text-decoration:underline; font-weight:700; font-family:inherit;">Brochure Released!</a>
         <span style="margin:0 1.5rem; color:#1976d2;">|</span>
         <span style="margin-right: 3rem; color:#1a237e; font-family:inherit;">Abstract Submission is now open! &nbsp;|&nbsp; Submit your abstracts by November 30, 2025 &nbsp;|&nbsp; Conference Dates: Feb 26–28, 2026 &nbsp;|&nbsp; Venue: JIIT, Noida, India</span>
@@ -1532,7 +1532,7 @@
   
 
     <!-- Chief Patrons & Patrons Section -->
-    <section class="patrons-section-minimal py-3">
+    <!-- <section class="patrons-section-minimal py-3">
       <div class="container">
         <h2 class="section-title text-center mb-2">Chief Patrons</h2>
         <div class="row justify-content-center mb-2 g-3">
@@ -1559,7 +1559,7 @@
               <div class="patron-name">Prof. S.C. Saxena</div>
               <div class="patron-role">Pro Chancellor, JIIT</div>
             </div>
-          </div>
+          </div> -->
           <!-- <div class="col-6 col-md-3 text-center">
             <div class="patron-card">
               <img src="images/patron2.jpg" alt="Prof. Bodh Raj Mehta" class="patron-img-minimal mb-2">
@@ -1567,10 +1567,10 @@
               <div class="patron-role">Vice Chancellor, JIIT</div>
             </div>
           </div> -->
-        </div>
+        <!-- </div>
       </div>
-      <style>
-        .patrons-section-minimal {
+      <style> -->
+        <!-- .patrons-section-minimal {
           background: #f4f9ff;
         }
         .patrons-section-minimal .section-title {
@@ -1619,10 +1619,10 @@
           .section-title { font-size: 1.1rem; }
         }
       </style>
-    </section>
+    </section> -->
 
     <!-- Chief Guest Section -->
-    <section id="chief-guest-section" class="chief-guest-section py-2" style="background: #f4f9ff;">
+    <!-- <section id="chief-guest-section" class="chief-guest-section py-2" style="background: #f4f9ff;">
         <div class="container">
             <h2 class="section-title text-center mb-2">Chief Guest</h2>
             <div class="row justify-content-center g-2">
@@ -1724,7 +1724,7 @@
                 }
             }
         </style>
-    </section>
+    </section> -->
 
     <title>Conference Tracks</title>
 
