--- a/committee.html
+++ b/committee.html
@@ -231,7 +231,7 @@
             <!-- Conference Committee Cards with Images and Grouped by Designation (Compact & Responsive) -->
             <div class="container">
                 <!-- Chief Patrons -->
-                <h3 class="mb-3 mt-4 text-center">Chief Patrons</h3>
+                <!-- <h3 class="mb-3 mt-4 text-center">Chief Patrons</h3>
                 <div class="row justify-content-center mb-3">
                     <div class="col-6 col-md-3 mb-3">
                         <div class="card h-100 text-center p-2">
@@ -241,8 +241,19 @@
                                 <div class="text-muted" style="font-size:0.9rem;">Founder Chancellor, JIIT</div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
+                    <h3 class="mb-3 mt-4 text-center">Chief Patron</h3>
+                <div class="row justify-content-center mb-3">
                     <div class="col-6 col-md-3 mb-3">
+                        <div class="card h-100 text-center p-2">
+                            <img src="images/chief2.jpg" class="rounded-circle mx-auto mt-2" alt="Prof. S.C. Saxena" style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                            <div class="card-body p-2">
+                                <h6 class="card-title mb-1" style="font-size:1rem;">Shri Manoj Gaur Ji</h6>
+                                <div class="text-muted" style="font-size:0.9rem;">Executive Chairman, Jaypee Group</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="col-6 col-md-3 mb-3">
                         <div class="card h-100 text-center p-2">
                             <img src="images/chief2.jpg" class="rounded-circle mx-auto mt-2" alt="Shri Manoj Gaur Ji" style="width:90px; height:90px; object-fit:contain; background:#fff;">
                             <div class="card-body p-2">
@@ -251,9 +262,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- Patrons -->
-                <h3 class="mb-3 mt-4 text-center">Patrons</h3>
+                <h3 class="mb-3 mt-4 text-center">Patron</h3>
                 <div class="row justify-content-center mb-3">
                     <div class="col-6 col-md-3 mb-3">
                         <div class="card h-100 text-center p-2">
