--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -647,13 +647,14 @@
                         <span class="text-warning" style="font-size:1.1em;"><i class="fas fa-star"></i></span>
                         Authors have chance to publish in reputed international Journals Indexed in SCOPUS, ABDC, and WOS etc. Following journals have confirmed collaboration with our Conference:
                         <ol class="mt-2 mb-2 ps-4" style="font-size:1em;">
-                            <li>International Journal of Learning and Change (Scopus Q4)</li>
-                            <li>International Journal of Entrepreneurship and Small Business (Scopus Q3)</li>
-                            <li>International Journal of Business and Globalization. (Scopus Q4)</li>
-                            <li>International journal of E-Entrepreneurship and Innovation (Scopus Q3)</li>
-                            <li>World Review of Entrepreneurship, Management and Sustainable Development.(Scopus Q4)</li>
-                            <li>Journal of English Language Teaching.</li>
                             <li>Reflections (Scopus Q2).</li>
+<li>International Journal of Entrepreneurship and Small Business (Scopus Q3)</li>
+<li>International Journal of E-Entrepreneurship and Innovation (Scopus Q3)</li>
+<li>International Journal of Learning and Change (Scopus Q4)</li>
+<li>International Journal of Business and Globalization (Scopus Q4)</li>
+<li>World Review of Entrepreneurship, Management and Sustainable Development (Scopus Q4)</li>
+<li>Journal of English Language Teaching.</li>
+
 
                         </ol>
                         <span class="ms-4">More journals of other domain will be added soon</span>
@@ -749,7 +750,7 @@
             </div>
 
             <!-- Important Dates -->
-            <div class="content-card" data-aos="fade-up" data-aos-delay="300">
+            <!-- <div class="content-card" data-aos="fade-up" data-aos-delay="300">
                 <h3 class="mb-4">Important Dates</h3>
                 <ul class="important-dates">
                     <li>
@@ -767,7 +768,7 @@
                     
                        
                 </ul>
-            </div>
+            </div> -->
         </div>
     </section>
 
