--- a/registration.html
+++ b/registration.html
@@ -888,19 +888,19 @@
                     <p><strong>Swift Code:</strong> XXXXXXXX</p>
                 </div> -->
 
-                <!-- QR Code -->
+                <!-- QR Code
                 <div class="qr-wrapper">
                     <img id="payment-qr" src="images/payment qr code.PNG" alt="Scan to pay QR code" class="qr-image">
                     <div class="qr-caption">Scan the QR to pay instantly</div>
-                </div>
+                </div> -->
 
                 <!-- Action Buttons -->
                 <div class="d-flex justify-content-center gap-3 flex-wrap mt-4">
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeBzNDZyzr3UlBBYst0sVjon_NKGgL51PdLtzHctP_fWWnhoA/viewform" class="btn-register" target="_blank" rel="noopener noreferrer">
-                        <i class="fas fa-user-plus me-2"></i>Register Now
+                        <i class="fas fa-user-plus me-2"></i>Submit Abstract
                     </a>
-                    <a id="pay-here-link" href="https://payments.cashfree.com/forms?code=WCSHSS" class="btn-register" target="_blank" rel="noopener noreferrer">
-                        <i class="fas fa-credit-card me-2"></i>Pay Here
+                    <a id="pay-here-link" href="https://forms.gle/iP7eo1Kevthtsirf9" class="btn-register" target="_blank" rel="noopener noreferrer">
+                        <i class="fas fa-credit-card me-2"></i>Register Now
                     </a>
                 </div>
             </div>
@@ -909,6 +909,7 @@
             <div class="registration-card" data-aos="fade-up" data-aos-delay="200">
                 <h3 class="mb-4">Registration Includes</h3>
                 <ul class="list-unstyled">
+                    <li><i class="fas fa-check-circle text-success me-2"></i>Participation certificates will be provided only to registered candidates. </li>
                     <li><i class="fas fa-check-circle text-success me-2"></i>Conference Kit (Offline Participants Only)</li>
                     <li><i class="fas fa-check-circle text-success me-2"></i>Access to All Sessions</li>
                     <li><i class="fas fa-check-circle text-success me-2"></i>Conference Proceedings</li>
