removal of institutional comittie

--- a/committee.html
+++ b/committee.html
@@ -209,7 +209,7 @@
                         <ul class="dropdown-menu" aria-labelledby="ichsmTeamDropdown">
                             <li><a class="dropdown-item active" href="committee.html">Organizing Committee</a></li>
                             <li><a class="dropdown-item" href="advisory_committee.html">Advisory Committee</a></li>
-                            <li><a class="dropdown-item" href="inst_advisory.html">Institutional Advisory Committee</a></li>
+                            <!-- <li><a class="dropdown-item" href="inst_advisory.html">Institutional Advisory Committee</a></li> -->
                         </ul>
                     </li>
                     <li class="nav-item">
