--- a/index.html
+++ b/index.html
@@ -991,7 +991,7 @@
                       <ul class="dropdown-menu" aria-labelledby="ichsmTeamDropdown">
                         <li><a class="dropdown-item" href="committee.html">Organizing Committee</a></li>
                         <li><a class="dropdown-item" href="advisory_committee.html">Advisory Committee</a></li>
-                        <li><a class="dropdown-item" href="inst_advisory.html">Institutional Advisory Committee</a></li>
+                        <!-- <li><a class="dropdown-item" href="inst_advisory.html">Institutional Advisory Committee</a></li> -->
                       </ul>
                     </li>
                     
