--- a/venue.html
+++ b/venue.html
@@ -360,7 +360,7 @@
                             <ul class="dropdown-menu" aria-labelledby="ichsmTeamDropdown">
                                 <li><a class="dropdown-item" href="committee.html">Organizing Committee</a></li>
                                 <li><a class="dropdown-item" href="advisory_committee.html">Advisory Committee</a></li>
-                                <li><a class="dropdown-item" href="inst_advisory.html">Institutional Advisory Committee</a></li>
+                                <!-- <li><a class="dropdown-item" href="inst_advisory.html">Institutional Advisory Committee</a></li> -->
                             </ul>
                         </li>
                     </li>
@@ -420,10 +420,10 @@
             <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <h3 class="mb-4">Facilities</h3>
                 <div class="facilities-grid">
-                    <div class="facility-card">
+                    <!-- <div class="facility-card">
                         <i class="fas fa-wifi facility-icon"></i>
                         <h4>Free Wi-Fi</h4>
-                    </div>
+                    </div> -->
                     <div class="facility-card">
                         <i class="fas fa-parking facility-icon"></i>
                         <h4>Parking</h4>
