--- a/registration.html
+++ b/registration.html
@@ -900,7 +900,7 @@
                         <i class="fas fa-user-plus me-2"></i>Submit Abstract
                     </a>
                     <a id="pay-here-link" href="https://forms.gle/iP7eo1Kevthtsirf9" class="btn-register" target="_blank" rel="noopener noreferrer">
-                        <i class="fas fa-credit-card me-2"></i>Register Now
+                        <i class="fas fa-user-plus me-2"></i>Register Now
                     </a>
                 </div>
             </div>
