--- a/index.html
+++ b/index.html
@@ -1199,10 +1199,10 @@
     </section> -->
 
     <!-- Notifications + About Section Row -->
-    <div class="container my-5">
-      <div class="row g-4 align-items-stretch">
+    <!-- <div class="container my-5">
+      <div class="row g-4 align-items-stretch"> -->
         <!-- About ICHSM Section -->
-        <div class="col-lg-7 col-12">
+        <!-- <div class="col-lg-7 col-12">
           <section class="about-ichsm-section h-100 d-flex align-items-center" style="background: none; box-shadow: none; padding: 0; margin: 0;">
             <div class="about-content" style="box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
               <div class="about-header">
@@ -1218,9 +1218,9 @@
               </div>
             </div>
           </section>
-        </div>
+        </div> -->
         <!-- Notifications Section -->
-        <div class="col-lg-5 col-12">
+        <!-- <div class="col-lg-5 col-12">
           <div class="card h-100 shadow-sm">
             <div class="card-body">
               <h4 class="mb-3" style="font-weight:700; color:#1a237e;">Notifications</h4>
@@ -1279,7 +1279,63 @@
           </div>
         </div>
       </div>
+    </div> -->
+
+    <!-- About + Publication Section Row -->
+<div class="container my-5">
+  <div class="row g-4 align-items-stretch">
+    
+    <!-- About ICHSM Section -->
+    <div class="col-lg-6 col-12">
+      <section class="about-ichsm-section h-100 d-flex align-items-center" style="background: none; box-shadow: none; padding: 0; margin: 0;">
+        <div class="about-content" style="box-shadow: 0 10px 30px rgba(0,0,0,0.1); border-radius: 15px; padding: 30px; background: #fff;">
+          <div class="about-header">
+            <h2>About ICHSM 2026</h2>
+            <div class="underline"></div>
+          </div>
+          <div class="about-text">
+            <p class="lead">Redefining Humanities, Social Sciences, and Management in the Digital Age</p>
+            <p>The ICHSM-2026 serves as a crucial platform for scholars, researchers, industry experts, and policymakers to explore the transformative impact of digital technologies across diverse academic and professional domains.</p>
+            <p>In an era where artificial intelligence, big data, blockchain, and automation are reshaping traditional paradigms, this conference aims to foster interdisciplinary discussions on the evolving roles of literature, sociology, economics, psychology, political science, and business management.</p>
+            <a href="about.html" class="about-btn">Read More <i class="fas fa-arrow-right"></i></a>
+            <a href="brochure.pdf" class="about-btn ms-2" target="_blank" rel="noopener" style="background: linear-gradient(135deg, #2196f3, #1a237e);">
+              <i class="fas fa-file-pdf me-2"></i>Download Brochure
+            </a>
+          </div>
+        </div>
+      </section>
     </div>
+
+    <!-- Publication Opportunities -->
+    <div class="col-lg-6 col-12">
+      <section class="about-ichsm-section h-100 d-flex align-items-center" style="background: none; box-shadow: none; padding: 0; margin: 0;">
+        <div class="about-content" style="box-shadow: 0 10px 30px rgba(0,0,0,0.1); border-radius: 15px; padding: 30px; background: #fff;">
+          <div class="about-header">
+            <h2>Publication Opportunities</h2>
+            <div class="underline"></div>
+          </div>
+          <div class="about-text">
+            <p class="lead">High-Impact Journals & Indexed Publications</p>
+            <p>Selected papers will have the opportunity to be published in reputed international journals indexed in SCOPUS, ABDC, and WOS.</p>
+            <ol style="padding-left: 20px;">
+              <li><strong>Reflections (Scopus Q2)</strong></li>
+              <li><strong>International Journal of Entrepreneurship and Small Business (Scopus Q3)</strong></li>
+              <li><strong>International Journal of E-Entrepreneurship and Innovation (Scopus Q3)</strong></li>
+              <li><strong>International Journal of Learning and Change (Scopus Q4)</strong></li>
+              <li><strong>International Journal of Business and Globalization (Scopus Q4)</strong></li>
+              <li><strong>World Review of Entrepreneurship, Management and Sustainable Development (Scopus Q4)</strong></li>
+              <li><strong>Journal of English Language Teaching</strong></li>
+            </ol>
+            
+            <p><em>More journals from other domains will be added soon.<br>Publication charges are to be borne by the authors where applicable.</em></p>
+          </div>
+        </div>
+      </section>
+    </div>
+
+
+  </div>
+</div>
 
     <!-- START: Important Dates and Countdown Section -->
     <div class="countdown-container">
