--- a/index.html
+++ b/index.html
@@ -1369,6 +1369,7 @@
               <div class="label">SECONDS</div>
             </div>
           </div>
+          <p class="registration-note mt-3 mb-0" style="margin-top: 12px; color: #444; font-size: 14px; text-align: center;"><strong>Note:</strong> Registration should be completed within one week of abstract acceptance</p>
         </div>
       </div>
       <!-- END -->
