--- a/registration.html
+++ b/registration.html
@@ -771,6 +771,7 @@
                         <span>Feb 26-28, 2026</span>
                     </li>
                 </ul>
+                <p class="registration-note mt-3 mb-0"><strong>Note:</strong> Registration should be completed within one week of abstract acceptance</p>
             </div>
 
             <!-- Registration Fees -->
