--- a/index.html
+++ b/index.html
@@ -2149,7 +2149,7 @@
                     <div class="social-links" style="display:flex; gap:0.5rem;">
                         <a href="https://www.facebook.com/profile.php?id=61583124148673" target="_blank" rel="noopener noreferrer" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://x.com/ichsmjiit" target="_blank" rel="noopener noreferrer" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fa-brands fa-x-twitter"></i></a>
-                        <a href="#" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/company/international-conference-on-humanities-social-sciences-and-management-ichsm-2026?_l=en_US" target="_blank" rel="noopener noreferrer" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-linkedin-in"></i></a>
                         <a href="https://www.instagram.com/ichsm2026?igsh=ODRwajN5YzRkaW9q" target="_blank" rel="noopener noreferrer" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-instagram"></i></a>
 
                     </div>
