--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <!-- AOS Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <style>
@@ -596,10 +596,10 @@
                     <h3 style="font-weight:600; font-size:1.05rem; margin-bottom:0.7rem;">Follow Us</h3>
                     <div style="border-bottom:2px solid #ff4d4d; width:32px; margin-bottom:0.5rem;"></div>
                     <div class="social-links" style="display:flex; gap:0.5rem;">
-                        <a href="#" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-twitter"></i></a>
-                        <a href="#" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=61583124148673" target="_blank" rel="noopener noreferrer" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://x.com/ichsmjiit" target="_blank" rel="noopener noreferrer" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-x-twitter"></i></a>
+                        <a href="https://www.linkedin.com/company/international-conference-on-humanities-social-sciences-and-management-ichsm-2026?_l=en_US" target="_blank" rel="noopener noreferrer" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.instagram.com/ichsm2026?igsh=ODRwajN5YzRkaW9q" target="_blank" rel="noopener noreferrer" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
