Add note on non-refundable registration fees
Added a note about non-refundable registration fees.

--- a/registration.html
+++ b/registration.html
@@ -880,6 +880,10 @@
                     </div>
                 </div>
 
+                <p class="mt-2 mb-0" style="font-size: 0.9rem; color: #555; text-align: center;">
+                    <strong>Note:</strong> Registration fees once paid are non-refundable.
+                </p>
+
                 <!-- <div class="payment-info">
                     <h4 class="mb-3">Payment Information</h4>
                     <p><strong>Bank Name:</strong> State Bank of India</p>
