--- a/committee.html
+++ b/committee.html
@@ -209,7 +209,7 @@
                         <ul class="dropdown-menu" aria-labelledby="ichsmTeamDropdown">
                             <li><a class="dropdown-item active" href="committee.html">Organizing Committee</a></li>
                             <li><a class="dropdown-item" href="advisory_committee.html">Advisory Committee</a></li>
-                            <!-- <li><a class="dropdown-item" href="inst_advisory.html">Institutional Advisory Committee</a></li> -->
+                            <li><a class="dropdown-item" href="inst_organizing.html">Institutional Organizing Committee</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -228,88 +228,85 @@
         <div class="container">
             <h2 class="section-title" data-aos="fade-up">Organizing Committee</h2>
             
-            <!-- Conference Committee Cards with Images and Grouped by Designation (Compact & Responsive) -->
-            <div class="container">
-                <!-- Chief Patrons -->
-                <!-- <h3 class="mb-3 mt-4 text-center">Chief Patrons</h3>
-                <div class="row justify-content-center mb-3">
-                    <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/chief1.png" class="rounded-circle mx-auto mt-2" alt="Shri Jaiprakash Gaur Ji" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Shri Jaiprakash Gaur Ji</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Founder Chancellor, JIIT</div>
-                            </div>
-                        </div>
-                    </div> -->
-                    <h3 class="mb-3 mt-4 text-center">Chief Patron</h3>
-                <div class="row justify-content-center mb-3">
-                    <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/chief2.jpg" class="rounded-circle mx-auto mt-2" alt="Prof. S.C. Saxena" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Shri Manoj Gaur Ji</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Executive Chairman, Jaypee Group</div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/chief2.jpg" class="rounded-circle mx-auto mt-2" alt="Shri Manoj Gaur Ji" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Shri Manoj Gaur Ji</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Executive Chairman, Jaypee Group</div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-                <!-- Patrons -->
-                <h3 class="mb-3 mt-4 text-center">Patron</h3>
-                <div class="row justify-content-center mb-3">
-                    <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/patron1.jpg" class="rounded-circle mx-auto mt-2" alt="Prof. S.C. Saxena" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Prof. S.C. Saxena</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Pro Chancellor, JIIT</div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/patron2.jpg" class="rounded-circle mx-auto mt-2" alt="Prof. Bodh Raj Mehta" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Prof. Bodh Raj Mehta</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Vice Chancellor, JIIT</div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-                <!-- Conference Chair -->
-                <h3 class="mb-3 mt-4 text-center">Conference Chair</h3>
-                <div class="row justify-content-center mb-3">
-                    <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/conference_chair.png" class="rounded-circle mx-auto mt-2" alt="Prof. Monika Suri" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Prof. Monika Suri</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Dean & HOD, HSS</div>
-                            </div>
-                        </div>
+            <!-- Organizing Committee -->
+<div class="container">
+
+    <!-- Chief Patron & Patron -->
+    <div class="row justify-content-center mb-4">
+        <div class="col-12">
+            <h3 class="text-center mb-3">Chief Patron & Patron</h3>
+        </div>
+
+        <!-- Chief Patron -->
+        <div class="col-6 col-md-3 mb-3">
+            <div class="card h-100 text-center p-2">
+                <img src="images/chief2.jpg" class="rounded-circle mx-auto mt-2"
+                     alt="Shri Manoj Gaur Ji"
+                     style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                <div class="card-body p-2">
+                    <h6 class="card-title mb-1">Shri Manoj Gaur Ji</h6>
+                    <div class="text-muted" style="font-size:0.9rem;">
+                        Executive Chairman, Jaypee Group
                     </div>
                 </div>
-                <h3 class="mb-3 mt-4 text-center">Co Chair</h3>
-                <div class="row justify-content-center mb-3">
-                    <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/cochair.png" class="rounded-circle mx-auto mt-2" alt="Dr Sakshi Varshney" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Dr. Sakshi Varshney</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Associate Head, HSS (JIIT-128)</div>
-                            </div>
-                        </div>
+            </div>
+        </div>
+
+        <!-- Patron -->
+        <div class="col-6 col-md-3 mb-3">
+            <div class="card h-100 text-center p-2">
+                <img src="images/patron1.jpg" class="rounded-circle mx-auto mt-2"
+                     alt="Prof. S.C. Saxena"
+                     style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                <div class="card-body p-2">
+                    <h6 class="card-title mb-1">Prof. S.C. Saxena</h6>
+                    <div class="text-muted" style="font-size:0.9rem;">
+                        Pro Chancellor, JIIT
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Conference Chair & Co Chair -->
+    <div class="row justify-content-center mb-4">
+        <div class="col-12">
+            <h3 class="text-center mb-3">Conference Chair & Co Chair</h3>
+        </div>
+
+        <!-- Conference Chair -->
+        <div class="col-6 col-md-3 mb-3">
+            <div class="card h-100 text-center p-2">
+                <img src="images/conference_chair.png" class="rounded-circle mx-auto mt-2"
+                     alt="Prof. Monika Suri"
+                     style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                <div class="card-body p-2">
+                    <h6 class="card-title mb-1">Prof. Monika Suri</h6>
+                    <div class="text-muted" style="font-size:0.9rem;">
+                        Dean & HOD, HSS
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Co Chair -->
+        <div class="col-6 col-md-3 mb-3">
+            <div class="card h-100 text-center p-2">
+                <img src="images/cochair.png" class="rounded-circle mx-auto mt-2"
+                     alt="Dr. Sakshi Varshney"
+                     style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                <div class="card-body p-2">
+                    <h6 class="card-title mb-1">Dr. Sakshi Varshney</h6>
+                    <div class="text-muted" style="font-size:0.9rem;">
+                        Associate Head, HSS (JIIT-128)
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
                 <!-- Convenors -->
                 <h3 class="mb-3 mt-4 text-center">Convenors</h3>
                 <div class="row justify-content-center mb-3">
