--- a/inst_organizing.html
+++ b/inst_organizing.html
@@ -277,7 +277,7 @@
             <div class="row g-0">
               <div class="col-12 col-md-6">
                 <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                  <div style="font-weight:600; color:#233459;">Dr. Alka Sharma</div>
+                  <div style="font-weight:600; color:#233459;">Prof. (Dr) Alka Sharma</div>
                   <span class="badge rounded-pill role-badge role-professor">Professor</span>
                 </div>
               </div>
