--- a/inst_organizing.html
+++ b/inst_organizing.html
@@ -278,7 +278,7 @@
               <div class="col-12 col-md-6">
                 <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
                   <div style="font-weight:600; color:#233459;">Prof. (Dr) Alka Sharma</div>
-                  <span class="badge rounded-pill role-badge role-professor">Professor</span>
+                  <span class="badge rounded-pill role-badge role-assistant">Professor</span>
                 </div>
               </div>
               <div class="col-12 col-md-6">
@@ -289,7 +289,7 @@
               </div>
               <div class="col-12 col-md-6">
                 <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                  <div style="font-weight:600; color:#233459;">Dr. Amba Aggarwal</div>
+                  <div style="font-weight:600; color:#233459;">Dr. Amba Agarwal</div>
                   <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
                 </div>
               </div>
@@ -308,9 +308,10 @@
               <div class="col-12 col-md-6">
                 <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
                   <div style="font-weight:600; color:#233459;">Dr. Badri Bajaj</div>
-                  <span class="badge rounded-pill role-badge role-associate">Associate Professor</span>
+                  <span class="badge rounded-pill role-badge role-assistant">Associate Professor</span>
                 </div>
               </div>
+              
               <div class="col-12 col-md-6">
                 <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
                   <div style="font-weight:600; color:#233459;">Dr. Chander Shekhar</div>
@@ -362,6 +363,12 @@
               </div>
               <div class="col-12 col-md-6">
                 <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
+                  <div style="font-weight:600; color:#233459;">Dr. Namreeta Kumari</div>
+                  <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
                   <div style="font-weight:600; color:#233459;">Dr. Neha Singh</div>
                   <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
                 </div>
@@ -378,15 +385,10 @@
                   <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
                 </div>
               </div>
+              
               <div class="col-12 col-md-6">
                 <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                  <div style="font-weight:600; color:#233459;">Dr. Namreeta Kumari</div>
-                  <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
-                </div>
-              </div>
-              <div class="col-12 col-md-6">
-                <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                  <div style="font-weight:600; color:#233459;">Dr. Paridhi Choudhary</div>
+                  <div style="font-weight:600; color:#233459;">Dr. Paridhi Chaudhary</div>
                   <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
                 </div>
               </div>
@@ -410,8 +412,8 @@
               </div>
               <div class="col-12 col-md-6">
                 <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                  <div style="font-weight:600; color:#233459;">Dr. Sanjay Kumar</div>
-                  <span class="badge rounded-pill role-badge role-practice">Professor of Practice</span>
+                  <div style="font-weight:600; color:#233459;">Prof. Sanjay Kumar</div>
+                  <span class="badge rounded-pill role-badge role-assistant">Professor of Practice</span>
                 </div>
               </div>
               <div class="col-12 col-md-6">
