--- a/inst_organizing.html
+++ b/inst_organizing.html
@@ -442,7 +442,7 @@
               </div>
               <div class="col-12 col-md-6">
                 <div class="committee-member-row d-flex align-items-center justify-content-between flex-wrap gap-2">
-                  <div style="font-weight:600; color:#233459;">Dr. Vandana Sehgal</div>
+                  <div style="font-weight:600; color:#233459;">Ms. Vandana Sehgal</div>
                   <span class="badge rounded-pill role-badge role-assistant">Assistant Professor</span>
                 </div>
               </div>
